# craftgate-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  Readme.md
.github/workflows/: audit.yml  build.yml
craftgate/: Cargo.toml
craftgate/src/: api_error.rs  client.rs  lib.rs  middleware.rs  response.rs
craftgate/src/request/: mod.rs
craftgate/src/request/onboarding/: create_member.rs  mod.rs  search_members.rs  update_member.rs
craftgate/src/request/payment/: checkout_payment.rs  mod.rs
craftgate/src/tests/: mod.rs  onboarding.rs
examples/checkout-payment/: Cargo.toml
examples/checkout-payment/src/: main.rs
src/: api_error.rs  client.rs  lib.rs  middleware.rs  response.rs
src/request/: mod.rs
src/request/onboarding/: create_member.rs  mod.rs
src/request/payment/: mod.rs
src/tests/: mod.rs  onboarding.rs
