[package]
name = "craftgate"
version = "0.0.1"
authors = ["Tunahan Karlibas <dvt.tnhn.krlbs@icloud.com>"]
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/dvtkrlbs/craftgate-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
reqwest-middleware = "0.2.3"
reqwest-retry = "0.3.0"
reqwest-tracing = "0.4.6"
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
secrecy = "0.8.0"
task-local-extensions = "0.1.4"
bytes = "1.5.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
tracing = "0.1.37"
hmac-sha256 = "1.1.7"
data-encoding = "2.4.0"
thiserror = "1.0.49"
async-trait = "0.1.73"
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
serde-enum-str = "0.4.0"
serde_json = "1.0.107"
rust_decimal = "1.32.0"
serde_repr = "0.1.16"
time = { version = "0.3.30", features = ["serde", "formatting", "parsing"] }
derive_builder = "0.12.0"

[dev-dependencies]
assert_matches = "1.5.0"
tokio = { version = "1.33.0", features = ["full"]}
dotenvy = "0.15.7"