[package]
name = "craftgate"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = true
repository.workspace = true


[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-webpki-roots"]}
reqwest-middleware = "0.2.3"
reqwest-retry = "0.3.0"
reqwest-tracing = "0.4.6"
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
secrecy = "0.8.0"
task-local-extensions = "0.1.4"
bytes = "1.5.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
tracing = "0.1.37"
hmac-sha256 = "1.1.7"
data-encoding = "2.4.0"
thiserror = "1.0.49"
async-trait = "0.1.73"
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
serde-enum-str = "0.4.0"
serde_json = "1.0.107"
rust_decimal = "1.32.0"
serde_repr = "0.1.16"
time = { version = "0.3.30", features = ["serde", "formatting", "parsing", "macros"] }
typed-builder = "0.18.0"

[dev-dependencies]
assert_matches = "1.5.0"
tokio = { version = "1.33.0", features = ["full"]}
dotenvy = "0.15.7"
