[package]
name = "checkout-payment-example"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
axum = "0.6.20"
dotenvy = "0.15.7"
craftgate = { path = "../../craftgate"}
serde = { version = "1.0.190", features = ["derive"] }